Fix delete button is not visible on a large table

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .container {
   display: grid;
-  height: 100vh;
   grid-template-rows: min-content min-content;
   padding: 8px;
 }
@@ -8,6 +7,7 @@
 .table-container {
   font-size: 12px;
   width: max-content;
+  padding-right: 30px;
 }
 
 .table-header {
@@ -71,11 +71,12 @@
   right: 0;
   background-color: white;
   border: none;
-  padding: 5px 2px;
+  padding: 5px;
   font-weight: bold;
-  font-size: 10px;
+  font-size: 12px;
   cursor: pointer;
   translate: 100%;
+  width: 20px;
 }
 
 .header-controlls {
